[package]
name = "ptun"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Per-process transparent proxy launcher for Linux"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

[dev-dependencies]
tempfile = "3.15"
